kubernetes/k8s-manifests/test/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
spec:
  type: LoadBalancer  
  selector:
    app: envoy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
