kubernetes/k8s-manifests/test/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-assistant-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-assistant-frontend
  template:
    metadata:
      labels:
        app: personal-assistant-frontend
    spec:
      containers:
        - name: personal-assistant-frontend
          image: shwme1nilrepeat/personal-assistant-frontend:latest
          env:
            - name: REACT_APP_GRPC_HOST
              value: "http://grpc-service:50051"

          ports:
            - containerPort: 80
