kubernetes/k8s-manifests/test/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: personal-assistant-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
