kubernetes/k8s-manifests/test/grpc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-assitant-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-assitant-grpc
  template:
    metadata:
      labels:
        app: personal-assitant-grpc
    spec:
      containers:
        - name: personal-assitant-grpc
          image: shwme1nilrepeat/personal-assistant-backend:latest
          args: [ "./grpc-main" ] # Запуск gRPC сервиса
          ports:
            - containerPort: 50051 # Пример порта для gRPC сервиса
---
